--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@aragon/templates-tokens": "^1.2.1",
     "@aragon/ui": "^1.5.0",
-    "@aragon/wrapper": "git://github.com/Thegaram/aragon.js#422f65ee3ac7d994b2dfdad98c5c93891fe1687e",
+    "@aragon/wrapper": "^5.0.0-rc.28",
     "@sentry/browser": "^5.17.0",
     "@ungap/event-target": "^0.1.0",
     "clipboard-polyfill": "^2.8.6",
@@ -50,6 +50,8 @@
     "lodash.memoize": "^4.1.2",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -66,7 +68,7 @@
     "web3-utils": "^1.2.6"
   },
   "devDependencies": {
-    "@aragon/os": "^4.0.0",
+    "@aragon/os": "4.3.0",
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.6.3",
@@ -102,6 +104,7 @@
     "@aragon/wrapper/web3-eth-abi": "1.2.6"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "bundlewatch": "bundlewatch",
     "start": "node scripts/start",
     "start:local": "node scripts/launch-local",
@@ -118,6 +121,7 @@
     "build:staging": "cross-env ARAGON_ENS_REGISTRY_ADDRESS=0xfe03625ea880a8cba336f9b5ad6e15b0a3b5a939 npm run build",
     "build:ropsten": "cross-env ARAGON_ETH_NETWORK_TYPE=ropsten npm run build",
     "build:xdai": "cross-env ARAGON_ETH_NETWORK_TYPE=xdai npm run build",
+    "build:cfx": "cross-env ARAGON_ETH_NETWORK_TYPE=cfx ARAGON_IPFS_GATEWAY=http://ipfs.io/ipfs npm run build",
     "lint": "eslint ./src",
     "test": "npm run lint && npm run jest",
     "jest": "jest",
