--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eth-ens-namehash": "^2.0.8",
     "file-saver": "^2.0.1",
     "history": "^4.9.0",
+    "js-conflux-sdk": "^1.5.15",
     "lodash.debounce": "^4.0.8",
     "lodash.memoize": "^4.1.2",
     "lodash.throttle": "^4.1.1",
