--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@aragon/templates-tokens": "^1.2.1",
-    "@conflux-/aragon-ui": "^1.5.2",
+    "@conflux-/aragon-ui": "^1.5.5",
     "@conflux-/aragon-wrapper": "^5.0.4",
     "@sentry/browser": "^5.17.0",
     "@ungap/event-target": "^0.1.0",
@@ -54,8 +54,8 @@
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.6.2",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
     "react-dropzone": "^10.1.3",
     "react-helmet": "^5.2.1",
     "react-spring": "^7.2.10",
