--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
     "resolve-pathname": "^3.0.0",
     "styled-components": ">=4.0.0",
     "use-wallet": "^0.8.1",
-    "web3": "^1.2.6",
-    "web3-eth-abi": "^1.2.6",
-    "web3-utils": "^1.2.6"
+    "web3": "1.2.6",
+    "web3-eth-abi": "1.2.6",
+    "web3-utils": "1.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
